# ckanext-relationships

./: MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
ckanext/relationships/: blueprint.py  constants.py  controller.py  helpers.py  overrides.py  plugin.py
ckanext/relationships/logic/action/: create.py  delete.py  get.py  update.py
ckanext/relationships/logic/auth/: create.py  get.py
ckanext/relationships/templates/package/: edit_base.html  read.html  related_datasets.html  relationships.html
ckanext/relationships/templates/package/snippets/: relationship_list.html
ckanext/relationships/tests/: test_plugin.py
