[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
	ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/relationships/i18n/ckanext-relationships.pot
width = 80

[init_catalog]
domain = ckanext-relationships
input_file = ckanext/relationships/i18n/ckanext-relationships.pot
output_dir = ckanext/relationships/i18n

[update_catalog]
domain = ckanext-relationships
input_file = ckanext/relationships/i18n/ckanext-relationships.pot
output_dir = ckanext/relationships/i18n
previous = true

[compile_catalog]
domain = ckanext-relationships
directory = ckanext/relationships/i18n
statistics = true